# OpenGlPractice

./: CMakeLists.txt  OpenGLNetwork.sln  README.md
OpenGLNetwork/: Circle.cpp  Circle.h  Engine.cpp  Engine.h  Line.cpp  Line.h  OpenGLNetwork.vcxproj  OpenGLNetwork.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
OpenGLNetwork/x64/Debug/: vc141.idb
OpenGLNetwork/x64/Debug/OpenGLNetwork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLNetwork.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/: config.json  fragmentShader.txt  network.json  vertexShader.txt
src/: Circle.cpp  Circle.h  Engine.cpp  Engine.h  Line.cpp  Line.h  Network.cpp  Network.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
x64/Debug/: OpenGLNetwork.ilk
